# chat_service_project

./: CMakeLists.txt  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  chat.cpp  llms-full.txt
k8s/: deployment.yaml
